[gd_scene load_steps=4 format=3 uid="uid://colrqteefvben"]

[ext_resource type="Script" path="res://Scene/Trade/Script/TradeUI/goods_list_item.gd" id="1_04p4h"]
[ext_resource type="Texture2D" uid="uid://dgbe8puaplb6m" path="res://icon.svg" id="1_u24qo"]
[ext_resource type="Texture2D" uid="uid://dafcexaqxhw75" path="res://Art/2D/BaseSceneUI/TradeUI/UI_cargo.png" id="2_bih0y"]

[node name="GoodsListItem" type="PanelContainer"]
custom_minimum_size = Vector2(700, 0)
offset_right = 15.0
offset_bottom = 10.0
size_flags_horizontal = 3
script = ExtResource("1_04p4h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_bih0y")
expand_mode = 5
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="IconRect" type="TextureRect" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
texture = ExtResource("1_u24qo")
expand_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="HeavyLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="MultiplierLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "0%"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="PriceLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "物品名称"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 175
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 30

[node name="NumberLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "9999"
horizontal_alignment = 2
vertical_alignment = 2
clip_text = true
text_overrun_behavior = 3

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="ReferenceRect" to="." method="_on_reference_rect_gui_input"]
